--- a/templates/eval/comp_gen_eval.html.twig
+++ b/templates/eval/comp_gen_eval.html.twig
@@ -1,20 +1,22 @@
-<!DOCTYPE html>
-<html lang="fr">
+{% extends "base.html.twig" %}
 
 
-<head>
+{% block head %}
     <meta charset="UTF-8">
 
     <title>ParaDocs</title>
 
     <!--CSS-->
+    {% block css %}
     <link rel="stylesheet" href="{{ asset('assets/CSS/navbar.css')}}">
     <link rel="stylesheet" href="{{ asset('assets/css/comp_gen_eval.css')}}">
+    {% endblock %}
 
 
-</head>
 
-<body>
+{% endblock %}
+
+{% block body %}
     
     <header>
     {% include "_partials/_navbar.html.twig" %}
@@ -83,3 +85,5 @@
                 </div>
             </div>
         </div>
+    </main>
+{% endblock %}
