--- a/templates/main/modif_data.html.twig
+++ b/templates/main/modif_data.html.twig
@@ -1,23 +1,26 @@
-<!DOCTYPE html>
-<html lang="fr">
+{% extends "base.html.twig" %}
 
-<head>
+{% block head %}
     <meta charset="UTF-8">
     <meta name='viewport' content="width=device-width, initial-scale=1.0">
 
     <title>{% block title %}Accueil{% endblock %} - ParaDocs</title>
 
     <!--CSS-->
+    {% block css %}
     <link rel="stylesheet" href="{{ asset('assets/CSS/navbar.css')}}">
     <link rel="stylesheet" href="{{ asset('assets/css/style_m_d.css')}}">
+    {% endblock %}
 
     <!--JS-->
+    {% block javascripts %}
     <script src="{{ asset('assets/Js/modif_data.js') }}" defer></script>
+    {% endblock %}
 
-</head>
+{% endblock %}
 
-<body>
-    {% block body %}
+
+{% block body %}
 
     <header>
     {% include "_partials/_navbar.html.twig" %}
@@ -417,10 +420,4 @@
     <footer>
     {% include "_partials/_footer.html.twig" %}
     </footer>
-    {% endblock %}
-</body>
-
-
-
-
-</html>
+{% endblock %}
