--- a/templates/eval/list_eval.html.twig
+++ b/templates/eval/list_eval.html.twig
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-
-<head>
+{% block head %}
     <meta charset="UTF-8">
 
     <title>ParaDocs</title>
 
     <!--CSS-->
+    {% block css %}
     <link rel="stylesheet" href="{{ asset('assets/CSS/navbar.css')}}">
     <link rel="stylesheet" href="{{ asset('assets/css/list_eval.css')}}">
+    {% endblock %}
 
 
-</head>
+{% endblock %}
 
-<body>
+{% block body %}
 
     <header>
     {% include "_partials/_navbar.html.twig" %}
@@ -229,4 +227,4 @@
 
     </main>
 
-</body>
+{% endblock %}
