--- a/templates/_partials/_navbar.html.twig
+++ b/templates/_partials/_navbar.html.twig
@@ -2,7 +2,7 @@
     <ul class = "menu">
         <li><img src = "/assets/imgs/logo.png" class = "img_menu"></li> <!-- Il faut mettre le chemin du controller qui affiche la page html -->
         <li> <a href = "{{ path('apphome') }}">Modifier la base de donnée</a></li>
-        <li> <a href = "{{ path('app_eval') }}">Créer une évaluation</a></li>
+        <li> <a href = "{{ path('app_eval_list') }}">Créer une évaluation</a></li>
         <li> <a href = "{{ path('app_profil') }}">Profil</a></li>
         <li> <a href = "{{ path('app_profil') }}"><img src = "../assets/imgs/image.jpg" class = "img_menu"></a></li>
     </ul>
