--- a/templates/eval/comp_gen_eval.html.twig
+++ b/templates/eval/comp_gen_eval.html.twig
@@ -81,7 +81,7 @@
                 </div>
                 <div class="ret-suiv">
                     <button class="vide-c">Retour</button>
-                    <button class="vide-c">Suivant</button>
+                    <a class="vide-c" href="{{ path('app_eval_choix') }}">Suivant</a>
                 </div>
             </div>
         </div>
