--- a/templates/eval/list_eval.html.twig
+++ b/templates/eval/list_eval.html.twig
@@ -222,7 +222,7 @@
             </div>
         </div>
         <div class="boutton-eval">
-            <button class="ajout-eval">Nouvelle évaluation</button>
+            <a class="ajout-eval" href="{{ path('app_eval_gen') }}">Nouvelle évaluation</a>
         </div>
 
     </main>
