--- a/public/assets/CSS/style_m_d.css
+++ b/public/assets/CSS/style_m_d.css
@@ -83,6 +83,11 @@ ul li:hover {
   background: #F8F8F8;
 }
 
+a.question-card{
+  color:#000000;
+  text-decoration: none;
+}
+
 
 
 div.search-button{
